syntax = "proto3";
package ubgp;

service Config {
  rpc GetNeighborConfig (NeighborRequest) returns (NeighborReply);
}

// service State {
//   rpc GetSession (NeighborRequest) returns (NeighborReply);
// }

message NeighborReply {
  string ip = 1;
  int32 port = 2;
  int32 asn = 3;
  int32 routerid = 4;
}

message NeighborRequest {
  string ip = 1;
}
